Opened 12 years ago

Closed 12 years ago

Last modified 12 years ago

#4018 closed defect (fixed)

Metadata lyrics

Reported by: p92 Owned by:
Priority: normal Component: avformat
Version: git-master Keywords: mov
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Summary of the bug:
i can store a metadata [lyrics] with more than 1024 bytes, but i can not read more of 1024 byte on the file mp4.
Why ?

Change History (7)

comment:1 by Carl Eugen Hoyos, 12 years ago

Keywords: tag removed

This has currently no similarities with a valid ticket.

Is your problem reproducible with ffmpeg (the application)? If yes please provide the command line that allows to reproduce the issue together with the complete, uncut console output and a sample.
If not please explain how we can reproduce your problem.

comment:2 by p92, 12 years ago

the file on the link has the lyrics tag with size 3476 bytes.
while ffmpeg reads ONLY the first 1024 bytes.
link file test: http://www.karaoke5.com/public/stream.mp4

ffmpeg version N-66249-gbcac0f4 build gcc 4.8.3

line command : ffmpeg -i stream.mp4 -f ffmetadata metadata.txt

result:

;FFMETADATA1
major_brand=isom
minor_version=512
compatible_brands=isomiso2avc1mp41
lyrics=+ceZFVZcV0Fn3C+hzhr8x9vsDMQOUlgCk9gcGig1WC4SYX528Zhc1rpLzkTfuKE1XitHl34PUAayecZkmFAK9bG5TKH+Bd03u2PROtaljlfHhpgwani5StQYT7IT3bHKbCsCNFUQ/UpmmJo59FX3Rm5uzgEZn8O13QWozrVyIPvTd2QPO6I+gNwJm9yvMatzo7S04uIuBfzbSo11z7WdATGN/CEvt0GTgPKCmYFXdA8dTJ+PaSs872UAMlWHOwCKaL4NKeZMhhBxtLTYqrIO5sxOfRF/lzMsRPLWxkCVwks2KBftw8tAoL274Yzs1j3swjh6dLJiFZtyzVlALX6Lqdd68S3WrN5RQ36jKI5opoXQRl+5Hrt2e1lpZBBTLAXLYJcbztgYmOQvPmwzjc87hq4pk0eq4xae3SECyxksjG+f0Yxyu9iQulIMZ3+aDtuTzM7z14Xt2sxPZQEo/pJDnoJgrnzJKfmn9TMvLO9di41eiHZ2/ZqDqbiLv4FAbW6MsJL3lQ3KUJy+0fm5EgpUi106jCdmIiYgmqHZMJALlvIyB+FvcFSohH/Yr+CztCA5lpdw7gBO9D7m/t8qeykWzxQ6Rrp6XeTW6FgXmi40HgOJaQ30l1PJF0VM3egW46U6KdvzEzSmLSCkTP/q+RWdv4LzrhXrH6BrhPmBUjhHhKNui+AO+PhwwIXgNtXJtUbb2ewlI9xLSr20lQNukeH9nBMHofF2DUBp34inn4xP4yfzLWjl1C1LbKxwZo6ydss/L/0To66Jyj0dUj/NswLrGKHxw6k0QiK5DpJMv6IBwwEPNNoWJiqrh7xqc45XiYnAXSwyguK8mGTMj2Jf9s7lNMoQe6uuvhJxXVL0SlkR0VFDSyb3FMzAo/rzX5xNahz0MXO2OIlVFe+lee/rZbOYzD6UXNdWTxy3/gQcL9FAP/M8g9OVJsv1UTXqwAHzJtAd9A8K5jcs2+4Kcc9MrtxLLU/eAxDk92EXWE7Ep8rTx1HTHsf7d1OHchc66WcsOT1
encoder=Lavf56.4.101

thank

comment:3 by Carl Eugen Hoyos, 12 years ago

Version: unspecifiedgit-master

What's wrong with ffmpeg -i stream.mp4?

comment:4 by p92, 12 years ago

Maybe I can not explain.
Reading the tag "lyrics", instead of reading 3476 bytes, READ ONLY 1024 BYTES.

The complete tag "lyrics" is this:
+ceZFVZcV0Fn3C+hzhr8x9vsDMQOUlgCk9gcGig1WC4SYX528Zhc1rpLzkTfuKE1XitHl34PUAayecZkmFAK9bG5TKH+Bd03u2PROtaljlfHhpgwani5StQYT7IT3bHKbCsCNFUQ/UpmmJo59FX3Rm5uzgEZn8O13QWozrVyIPvTd2QPO6I+gNwJm9yvMatzo7S04uIuBfzbSo11z7WdATGN/CEvt0GTgPKCmYFXdA8dTJ+PaSs872UAMlWHOwCKaL4NKeZMhhBxtLTYqrIO5sxOfRF/lzMsRPLWxkCVwks2KBftw8tAoL274Yzs1j3swjh6dLJiFZtyzVlALX6Lqdd68S3WrN5RQ36jKI5opoXQRl+5Hrt2e1lpZBBTLAXLYJcbztgYmOQvPmwzjc87hq4pk0eq4xae3SECyxksjG+f0Yxyu9iQulIMZ3+aDtuTzM7z14Xt2sxPZQEo/pJDnoJgrnzJKfmn9TMvLO9di41eiHZ2/ZqDqbiLv4FAbW6MsJL3lQ3KUJy+0fm5EgpUi106jCdmIiYgmqHZMJALlvIyB+FvcFSohH/Yr+CztCA5lpdw7gBO9D7m/t8qeykWzxQ6Rrp6XeTW6FgXmi40HgOJaQ30l1PJF0VM3egW46U6KdvzEzSmLSCkTP/q+RWdv4LzrhXrH6BrhPmBUjhHhKNui+AO+PhwwIXgNtXJtUbb2ewlI9xLSr20lQNukeH9nBMHofF2DUBp34inn4xP4yfzLWjl1C1LbKxwZo6ydss/L/0To66Jyj0dUj/NswLrGKHxw6k0QiK5DpJMv6IBwwEPNNoWJiqrh7xqc45XiYnAXSwyguK8mGTMj2Jf9s7lNMoQe6uuvhJxXVL0SlkR0VFDSyb3FMzAo/rzX5xNahz0MXO2OIlVFe+lee/rZbOYzD6UXNdWTxy3/gQcL9FAP/M8g9OVJsv1UTXqwAHzJtAd9A8K5jcs2+4Kcc9MrtxLLU/eAxDk92EXWE7Ep8rTx1HTHsf7d1OHchc66WcsOT1xV4E4uYEzX9rkEIXpQ0rMhGU2cC4j1fT+HLP+ipwyz1Cf73t79beH8rOCg25suq5I/kEoIN8puFQdxpaHa9nQkreZFXG1hBySVGKIbYUydacURODv0jCdPRmq6oloXeVlxlNelo+nTVwQdL7pJ0aKoGeQRc8nDWiaZy048sKIRSD5pynf5IrgHfTQi+ZZ8wEEbGyxN3d24OLOr9WKuNJEZSBU+bWWNacOCIiDqQtLBwFvU0Ao6zLzRB1TajdpOiL3Q1ZnVSGMpJhKp8Z9D7PjEDu/VkN5xeE4sZeP6AMCVsKcs6jD7DYkZ31U5SCgZ7zCk/jMhhzQ7J67v+Ir3Mq2v5zfu1KYAMvjKcgyRIpoKxEYHk2fyFn4+mnCy1b0hO/SibBQRnbToVXHQ8FdAtOou2TkLv5+Vub2PMcWTqXaxtYqEeevExsxyf4qmHFs8BcIHWHif233SjxQOjCA5gb3qXtBAd/dBpGQosFrviJ7RYngjA5HnJQ/Hkc8r4ouWRAlBVP9ZWWLMvGnHo6zGjRzd11m9A8IMUIRa0ZJo7wufLzm6jKRXGr3T9DKOv6xMsk765vOX9KDEW51b+WzkX525rXxAx0pktEuD4KQXZ4KlxUDIZfp+JSS6kwXAJ26yg4xCITELS524JJaFwNmfU5DkSRptLSZbkrNppzWDijNw4jDwVmfffS3wjPDUqKaWttWyiQyvdbdA3qVT7rI+/U1gDRUyAQQZr71dM7xQaGQZEzs+J1R+MR0RaW9887i71uySJraBfmog9+DKw6xQVY0pmcA2PxlNYhUmIm7MA+h6lJP0s/v8/pP1wZWKS4US+aox/jg+7ieOVPJ867VINGsRzszwPLc/33fmO0XEygxuAXFbTZifPhomb51qVvJol0lBZHPrLjwcSXdGrP8IX5uqudznc/ucLwO7FLI6lzWCfzmvyf2gPE9sXhGXEhBbbFYIZez4UJ6qNt9hbBeAjS6oO6/oAFTfJPqT69EoCFxwgCGPLn+0VH6R+EphTVCjBdVWUdkQqJ9FDe/x5D9H0/HNieY0v4cS5AwbRhsW+HYwl52wZMQvIvGV6nt5prxt2Kz1NLNvyDNN0PPR2KABy25RZ7zewKM6ag1kOPr14vIBZitENirzeeWrGoMbpmE+UDCCKX+qzGmDr+f16B5SJxHUKxaT5JV0v2dnBciyZ1OkCLxO1y8Qs8TwbmC0zRF4vdirwL8yjSaJeCGiCXX5dkUl39H3WLIABEabIsjTK/TTqZzPsxqNIYH94fqjra3/57Yp9P/IuTXZc4M7v4fQ/tThgwqQ9dDG7MMOhuPNDVRTRLN97ddTfFVlku7xC3M3GajRvKQuhc/PEygKRSgsEtJXl1CJ0EKiS8JtpJGgEdD/A3hJc+ZZoj2oTE+LxU71FRGtspXWwOnHnLmbnTADCox/tChWmB5IZgzif5sdtTSC36BCexv13y5zAUzJUj2+YLdyCHSapFKnzwYjHlliS71PnUJg01Vom6HBtf20o3Y7NMxBVwpeKbsYNxbr83Z9vNajFgT502u+kU+NovP4RNoQOyflR4ZuMHTpyNtWAbnuCyXOANFLVV1FChA8sdnr4b9m5FtDrBgUmNrW67TZmvs+mRnfaqp1PiZejpekfkVky0aCnMRylPwVWD1DQ8TIgz7gV/g6Ibb9EfFPbkFldIFvSGUJEjdk5cRawHppv86XLrRsFLUVOAYg7SjR6FQNb3YPkYeF6BpPc5ZMGpKOyAMWtvnDax6sIadgJaugC+tRHK1xkhd4VC+xmck/I/kN1AAaJhZ6OJOmrk0vTQqcSTl6TP5kxCVT1ZRZShNPT9KvPoO5OzoCHhoA86E09AsGhoFfgVDh9487v1yZySHpuwpiHYbFrJ0dr+Nmo4W7aeQ1XOuMVfU5i2GE+6iFHqL8ELpBdOeNUTDDSmflasY+sJv2UlBvpVnjCpIHF+W5v/mlZSTkqHFk7+8E21W8VYNt7G4axxtnQc5l4R09LJKiroZLdg2phZ0hkwkPrbcTbIPfLGIazKYzfCFXAOtf1FgR9wT27QeCUewrMBMTs25JamP+HYP6c1XsnOSTvMX87wI0SFya6/mknsTVnST9Jnv1l96lvO3XYjThFh646F7+rPViTrH2poLU/77e4cQtmlpHHLpKBYuhtHlVurZ+QKEi/FSMo6fmepClTjnKJrLAlvEnyRARpHIz0I2w8Xr4jfFUPKt5CdwJUxbMngmJgDKHTLquIK8pMp8owmRO1Bmsv0MtC547765lSb2acR9tGazE2MLu4k20nC9WvoV3VfH0TMQjIXGYEthXvP9DAfzygigUeVvOyUGIpukjrevISWmmqGfex0lDXkQMxihuBlvj8eFw9jhl+uSAEmPmj4etUScFEtS/GvgcOXfU4g1IlpT7hnMzHiE0vqBIN9iq+E436GDkJsU4hBRiksGLRHg==

->>>>Everything in bold is truncated

an additional information: the mkv format instead reads the tag lyrics correctly.
With the MP4 format instead reads the first 1024 bytes of characters.

Last edited 12 years ago by p92 (previous) (diff)

comment:5 by Carl Eugen Hoyos, 12 years ago

Keywords: mov added

comment:6 by Michael Niedermayer, 12 years ago

Resolution: fixed
Status: newclosed

probably fixed in f31445a82d6acd0b8fab5a26c04e91645f4854d8
I could not test as the file is 404

Note: See TracTickets for help on using tickets.