lavf/mov.c: Allocate buffer in case of long metadata entries.

Fixes ticket #4018

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>